Removed boilerplate and improved tests (#119)
