# src/main/java/com/lauro/correia/reactive/api/model/Album.java
@@ -1,6 +1,4 @@
 package com.lauro.correia.reactive.api.model;
 
-import com.fasterxml.jackson.annotation.JsonProperty;
-
-public record Album(String userId, @JsonProperty("id") String albumId, String title) {
+public record Album(String id, String userId, String title) {
 }
