# src/main/java/com/lauro/correia/reactive/api/model/Post.java
@@ -1,6 +1,4 @@
 package com.lauro.correia.reactive.api.model;
 
-import com.fasterxml.jackson.annotation.JsonProperty;
-
-public record Post(String userId, @JsonProperty("id") String postId, String title, String body) {
+public record Post(String id, String userId, String title, String body) {
 }
